# scripts

./: .gitignore  .gitmodules  project  tmux-sessionizer-env-projects  update
.local/scripts/: boost  general_workflow  main  model  mupdf-sessionizer-pdf  neossh  nvim_ssh  project  setup  tmux-sessionizer-env-projects  tmux-sessionizer-obsidian  tmux-sessionizer-pdf
.local/scripts/default_sup_model/: config.yaml  loss.py  model.py
.local/scripts/gh_templates/: python_pypi.yml  zig_ci.yml
.local/scripts/project_manager/: general_workflow
.local/scripts/project_manager/actions/: cpp_ci.yml  pypi_cd.yml  python_ci.yml  rust_ci.yml  zig_ci.yml
.local/scripts/project_manager/workflows/cpp/: CMakeLists.txt
.local/scripts/project_manager/workflows/lightorch/: config.yaml  model.py
.local/scripts/project_manager/workflows/ml-arch/: CMakeLists.txt
.local/scripts/project_manager/workflows/torch-binding/: CMakeLists.txt  setup.py
.local/scripts/project_manager/workflows/torch-binding/include/: sample.h  typeTraits.h
.local/scripts/project_manager/workflows/torch-binding/lib/cuda/: sample.cu
.local/scripts/project_manager/workflows/torch-binding/sample/: __init__.py  functional.py  module.py
.local/scripts/project_manager/workflows/torch-binding/src/cpu/: sample.cpp
.local/scripts/project_manager/workflows/torch-binding/tests/: test_sample.py
.local/scripts/templates/lightorch/: data.py  htuning.py  model.py
.local/scripts/templates/ml-arch/: CMakeLists.txt
default_sup_model/: README.md  htuning.py
(+11 files in other folders)
